Tue Jul 19 22:07:15 CEST 2005 (tk)
----------------------------------
  * configure.in: fix compilation error when curl is installed in a
		  non-standard location (reported by Serge van den Boom
		  <svdb*stack.nl>)

Tue Jul 19 21:11:25 CEST 2005 (tk)
----------------------------------
  * configure.in: add support for DragonFly (thanks to Joerg Sonnenberger
		  <joerg*britannica.bec.de>)

Tue Jul 19 21:01:30 CEST 2005 (tk)
----------------------------------
  * shared/output.c: fix mutex handling in the new implementation of logg()
		     Patch by Mark Pizzolato.

Tue Jul 19 20:15:43 CEST 2005 (tk)
----------------------------------
  * clamscan/clamscan.c: verify arguments passed to --max-dir-recursion and
			 --max-ratio (problem reported by Jo Mills
			 <Jonathan.Mills*frequentis.com>)

Tue Jul 19 09:55:52 CEST 2005 (acab)
------------------------------------
  * libclamav/fsg.c:    Fix possible integer overflow. Reported by Alex Wheeler.

Sat Jul 16 16:52:17 BST 2005 (njh)
----------------------------------
  * libclamav/mbox.c:	Fix name clash with glibc library, reported by
				Brian Bruns <bruns at 2mbit.com>

Sat Jul 16 17:02:53 CEST 2005 (tk)
----------------------------------
  * libclamav/others.c: Check for 0 byte allocations in cli_(m|c|re)alloc

Fri Jul 15 11:19:54 BST 2005 (trog)
-----------------------------------
  * libclamav/chmunpack.c: Fix possible malloc overflow. Reported by Alex Wheeler.

Mon Jul 11 15:57:05 BST 2005 (njh)
----------------------------------
  * libclamav/tnef.c:	Fix possible crash if the length field is 0 or negative
				in headers - reported by Alex Wheeler (alexbling
				at gmail.com)

Sat Jul  2 22:05:03 BST 2005 (njh)
----------------------------------
  * libclamav/mbox.c:	NEW_WORLD: Improved the handling of files which contain
				carriage returns

Thu Jun 30 15:51:54 BST 2005 (njh)
----------------------------------
  * clamav-milter:	Honour LogClean
			Only syslog once when storing email in quarantine,